# Supreme-Zone-Platform

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml
config/: default.yaml  local.example.yaml
src/: asynccontextmanager.py
src/supreme_zone/: __init__.py  runtime_fixes.py  webapp.py
src/supreme_zone/core/: __init__.py  bootstrap.py  cli.py  config.py  container.py  error_handler.py  events.py  exceptions.py  health.py  injector.py  logger.py  platform.py  plugins.py  runtime.py  runtime_patches.py  settings.py
src/supreme_zone/modules/analysis_engine/: __init__.py  analyzer.py  data_reader.py  governance.py  image_reader.py  models.py  resolver.py  service.py  strategy_profile.py
src/supreme_zone/modules/backtest_engine/: __init__.py  models.py  service.py
src/supreme_zone/modules/dashboard/: __init__.py  models.py  service.py
src/supreme_zone/modules/data_engine/: __init__.py  accounts.py  cache.py  chart_renderer.py  database.py  errors.py  live_stream.py  market.py  models.py  mt5_connector.py  providers.py  scheduler.py  service.py  storage.py  symbol_manager.py  timeframe_manager.py
src/supreme_zone/modules/entry_engine/: __init__.py  models.py  service.py
src/supreme_zone/modules/execution_engine/: __init__.py  models.py  (+1 more)
src/supreme_zone/shared/: __init__.py
tests/: test_analysis_engine.py  test_bootstrap.py  test_cli_and_governance.py  test_core_services.py  test_dashboard_spa.py  test_data_engine.py  test_data_infra.py  test_error_handler.py  test_platform_orchestrator.py  test_settings.py  test_stage_3_to_10.py  test_webapp.py
(+18 files in other folders)
