[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supreme-zone-platform"
version = "0.1.0"
description = "Institutional trading platform foundation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ali Saad" }]
dependencies = [
  "PyYAML>=6.0",
  "Pillow>=10.0",
  "matplotlib>=3.8",
  "pytest>=8.0",
  "fastapi>=0.115",
  "uvicorn>=0.30"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
